# rov-inspect

./: .gitignore  CLAUDE.md  LICENSE  NOTES.md  PROJECT_LOG.md  README.md  pyproject.toml
demo/: README.md
docs/: PROJECT_LOG.md
eval/: README.md  compare.py  extract_gt.py  gt_annotations_subset.json  gt_annotations_template.json  run_eval.py
scripts/: explore_logs.py  run_pipeline.py  run_sam3_postprocess.py  sam3_smoke.py  test_local_vlm.py
src/rov_inspect/: __init__.py  candidates.py  embed.py  enhance.py  pipeline.py  render.py  schema.py  segment.py  segment_sam3.py  sync.py  vlm_api.py  vlm_common.py  vlm_local.py
