[project]
name = "rov-inspect"
version = "0.2.0"
description = "AI-assisted ROV video inspection — fully local, no API costs"
readme = "README.md"
requires-python = ">=3.11"

# Core dependencies. mlx-vlm requires macOS on Apple Silicon — install
# it on the project machine; on other OSes you can still use everything
# except the VLM step.
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "opencv-python>=4.8",
    "python-docx>=1.0",
]

[project.optional-dependencies]
# Local VLM (Apple Silicon required). This is the default backend.
local = [
    "mlx-vlm>=0.1.10",
]
# Optional, NOT used by default. Kept for ablation comparisons only.
# Using this incurs API costs — disabled for this university project.
api = [
    "anthropic>=0.40",
]
dev = [
    "ipykernel",
    "jupyter",
    "matplotlib",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rov_inspect"]

[tool.ruff]
line-length = 100
target-version = "py311"
